--- a/templates/body.html
+++ b/templates/body.html
@@ -104,10 +104,11 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ _('About Us') }}
                   <i class="fa fa-angle-down"></i></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="https://spy.python.sk/{{ lang_code }}/">{{ _('SPy o.z.') }}</a></li>
+                  <li><a href="{{ url_for('faq', lang_code=lang_code) }}">{{ _('FAQ') }}</a></li>
                   <li><a href="{{ url_for('venue', lang_code=lang_code) }}">{{ _('Venue') }}</a></li>
                   <li><a href="{{ url_for('coc', lang_code=lang_code) }}">{{ _('Code of Conduct') }}</a></li>
                   <li><a href="{{ url_for('cfv', lang_code=lang_code) }}">{{ _('Call for volunteers') }}</a></li>
+                  <li><a href="https://spy.python.sk/{{ lang_code }}/">{{ _('SPy o.z.') }} <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                 </ul>
               </li>
 
