fixed typos and capitalized languages

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -50,10 +50,10 @@
               <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('Talks will be mostly in english and slovak language. Possibly we will have a few talks in czech language. If you do not speak slovak or czech do not worry, we have two tracks so there will be allways talk in english.') }}
+                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak slovak or czech do not worry, we have two tracks so there will be allways talk in english.') }}
                   </p>
                   <p class="text-justify">
-                    {{ _('Volunteers do speak english. In slovakia there is mandatory second language in school so most of the attendees will speak english or other language (at least a little bit).') }}
+                    {{ _('Volunteers do speak English. In Slovakia there is mandatory second language in school so most of the attendees will speak English or other language (at least a little bit).') }}
                   </p>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                     {{ _('On Firday there will be an unofficial party. We will meet in a pub and have fun, no need for special ticket.') }}
                   </p>
                   <p class="text-justify">
-                    {{ _('On Saturday we\'ll have an official conference dinner! There is a speacial ticket for this event.') }}
+                    {{ _('On Saturday we\'ll have an official conference dinner! There is a special ticket for this event.') }}
                   </p>
                 </div>
               </div>
