updated texts and translations

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -50,7 +50,7 @@
               <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak slovak or czech do not worry, we have two tracks so there will be allways talk in english.') }}
+                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak Slovak or Czech do not worry, we have two tracks so there will be always talk in English.') }}
                   </p>
                   <p class="text-justify">
                     {{ _('Volunteers do speak English. In Slovakia there is mandatory second language in school so most of the attendees will speak English or other language (at least a little bit).') }}
