--- a/templates/faq.html
+++ b/templates/faq.html
@@ -50,7 +50,7 @@
               <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak slovak or czech do not worry, we have two tracks so there will be allways talk in english.') }}
+                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak Slovak or Czech do not worry, we have two tracks so there will be always talk in English.') }}
                   </p>
                   <p class="text-justify">
                     {{ _('Volunteers do speak English. In Slovakia there is mandatory second language in school so most of the attendees will speak English or other language (at least a little bit).') }}
@@ -95,10 +95,10 @@
               <div id="collapseB" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('If you go to PayPal page there is possibility to pay with credit card (also with debit card) directly, without creating an account.') }}
+                    {{ _('Currently, it is not possible to pay via PayPal without a Paypal account.') }}
                   </p>
                   <p class="text-justify">
-                    {{ _('We accept wire transfer, since that needs manual work additional 1 Euro fee is applied. Please send us a list of tickets you are interested in, we will send you variable symbol and after we receive the payment, we will issue and send the requested tickets to you by email.') }}
+                    {{ _('Therefore we accept also a wire transfer. This method, however, requires manual processing, which may lead to little delay. Please send us a list of tickets you are interested in, we will send you variable symbol and after we receive the payment, we will issue and send the requested tickets to you by email.') }}
                   </p>
                   <p class="text-justify">
                     {{ _('We also accept Bitcoin, Litecoin and (possibly) other crypto currencies. Please send us a list of tickets you are interested in, and currency you want to use and we\'ll send you a wallet address and once the payment is confirmed, we will issue and send the requested tickets to you by email.') }}
