--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -26,7 +26,7 @@
 
           <p>{{ _('This year’s keynote speaker will be Juraj Hromkovič, a professor at ETH Zürich, whose main focus of work is education for teachers of Computer Science.') }}</p>
 
-          <img src="http://www.abz.inf.ethz.ch/abz-presse/juraj-hromkovic/pictures/picture-1.jpg" width="50%"></img>
+          <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hromkovic.jpg') }}" alt="{{ _('Profesor Juraj Hromkovič, DrSc.') }}" />
 
           <p class="small">{{ _('Profesor Juraj Hromkovič, DrSc.') }}</p>
 
