--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -102,7 +102,7 @@
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
 {#                            </ul>#}
                             <div class="ts-speaker-bio">
-                                <p>{{ _('Juraj Hromkovič, a professor at ETH Zürich, whose main focus of work is education for teachers of Computer Science.') }}</p>
+                                <p>{{ _('Profesor Juraj Hromkovič is a university lecturer from Swiss Federal Technology Institute (ETH) in Zürich. He has authored many books and scientific publications dealing particularly with algorithmics, probabilistic algorithms and didactics of informatics. He focuses on education of informatics teachers and implementing of informatics to elementary schools. In 2017, he was awarded a 1st class Pribina Cross state order by President of Slovak republic Andrej Kiska.') }}</p>
                             </div>
                             <div class="ts-speaker-session">
 {#                            <div class="ts-speaker-session">#}
