--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -62,9 +62,7 @@
                             <h3 class="ts-speaker-name dark">Helen Li</h3>
                             <p class="ts-speaker-designation">{{ _('senior software engineer with Google AI Genomics') }}</p>
                             <ul class="ts-speaker-social-links">
-{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://twitter.com/xunjieli" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://github.com/google/nucleus" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                             <div class="ts-speaker-bio">
