--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -47,6 +47,23 @@
       </div><!--/ Content row 1 end -->
 
       <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Bronze Sponsors') }}</h3>
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/stickermule.svg') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Sticker Mule</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://www.stickermule.com/eu" target="_blank"><i class="fa fa-globe"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div>
+
+      <div class="row text-center">
         <h3 class="sponsor-title">{{ _('Media Partners') }}</h3>
 
         <div class="col-xs-12 col-sm-3 col-md-3">
@@ -59,6 +76,40 @@
                 <a href="http://robime.it" target="_blank"><i class="fa fa-globe"></i></a>
                 <a href="https://facebook.com/robimeit" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/robimeit" target="_blank"><i class="fa fa-twitter"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div>
+
+      <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Partners') }}</h3>
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">STU FIIT</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://www.fiit.stuba.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/FIIT.STU/" target="_blank"><i class="fa fa-facebook"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/progressbar.svg') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Progressbar</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://www.progressbar.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/progressbar" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/progressbarsk" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/Progressbar" target="_blank"><i class="fa fa-github"></i></a>
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
