Added Poster Session info text

--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -73,7 +73,7 @@
                 <div class="sponsor-info">
                   <h4 class="sponsor-name"><i class="fa fa-file-image-o"></i> {{ _('Poster') }}</h4>
                   <p class="text-justify">
-
+                    {{ _('Are you involved in an interesting project, new service or application of technology? We would like to see your talk but if you - for any reason - prefer not to talk in large auditorium or you think your achievements are of limited interest and therefore not suitable for general audience why not present what you are doing in PyCon SK Poster Session?') }}
                   </p>
                 </div><!-- Info end -->
               </div><!-- Sponsor details -->
