--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -116,6 +116,40 @@
                 </div><!-- Speaker list 3 end -->
             </div><!-- Speaker row 3 -->
 
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/spademan.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Luke Spademan</h3>
+                            <p class="ts-speaker-designation">{{ _('CS student and Python enthusiast') }}</p>
+{#                            <ul class="ts-speaker-social-links">#}
+{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+{#                            </ul>#}
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Luke is 17 and is studying computer science, maths, further maths and physics in Year 12 (English Secondary school / Sixthform). He loves to program in Python and thinks that the micro:bit is a great eductional tool and should be more widely used. He has given previous talks at Pycon UK and is looking forward to speaking at Pycon SK 2019.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+{#                            <div class="ts-speaker-session">#}
+{#                                <h4 class="session-title">{{ _('TBD') }}</h4>#}
+{#                                <p>{{ _('TBD') }}</p>#}
+{#                            </div>#}
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 3 end -->
+            </div><!-- Speaker row 3 -->
+
 
         </div>
     </section>
