Minor revision of job fair texts, added generatic static for job fair

--- a/templates/job-fair.html
+++ b/templates/job-fair.html
@@ -17,31 +17,29 @@
         <div class="col-md-12">
 
           <p class="lead">
-              {{ _('Although PyCon SK is a tech conference offering plenty of technical talks and workshops, it also has a social element - you can meet countless people with similar interests either on Social event or during the coffee breaks.') }}
-          </p>
-          <p class="text-justify">
-              {{ _('We also offer something in between - a job fair. A unique opportunity for employers to seek for candidates in conference with hundreds of tech people in one place. It is also great opportunity for the others whether you look for your first job or looking for a change in your career.') }}
+              {{ _('An opportunity for employers to look for candidates in tech conference packed with geeks and programmers in general and also for more or less experienced job seekers to meet with multiple tech companies in one place.') }}
           </p>
 
           <h2>{{ _('Employers') }}</h2>
           <p class="text-justify">
-            {{ _('PyCon SK will be during the three days a place with the highest density of Python programmers per square meter. ') }}
+            {{ _('PyCon SK will be the capital of Python for three days, it will become a place with the highest density of Python programmers per square meter. ') }}
             {{ _('You can seek for fresh graduates, but also for seasoned programmers who are looking for a change in their careers. ') }}
-            {{ _('Present your company and provide an overview of what it is like to work with you. ') }}
+            {{ _('Present your company and show what it is like to work with you. ') }}
           </p>
 
           <h2>{{ _('Students') }}</h2>
           <p class="text-justify">
             {{ _('Looking for your first real job as a programmer? PyCon SK is a great place with many companies eager to hire a Pythonista. ') }}
             {{ _('Visit our Job fair or drop in the sponsors'' booths and talk with your potential future employer. ') }}
-            {{ _('Get an idea how the interview with recruiter looks like. ') }}
+            {{ _('Get an idea of how the interview with recruiter looks like. ') }}
             {{ _('Find the company that suits you and can use your skills best. ') }}
           </p>
 
           <h2>{{ _('Professionals') }}</h2>
           <p class="text-justify">
-            {{ _('If you feel like looking for a new challenges or you just feel an urge to change your career after years of routine work, PyCon SK is the best place for you. ') }}
+            {{ _('If you feel an urge to change your career after years of routine work, PyCon SK is the best place for you. ') }}
             {{ _('Visit our job fair and talk with companies that will appreciate your experience.  ') }}
+            {{ _('Even if you do not look for a new job, you might get an overview of what options you have. ') }}
           </p>
 
         </div>
